# ghostscope

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/ghostscope/: __init__.py  autoencoder.py  cli.py  datagen.py  detector.py  features.py  logging_utils.py  metrics.py  schema.py
tests/: test_cli.py  test_datagen.py  test_detector.py  test_features.py  test_metrics.py
