[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ghostscope"
version = "0.1.0"
description = "AI-based network intrusion detection for authorized defensive monitoring"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "joemunene-by" }]
keywords = ["security", "intrusion-detection", "anomaly-detection", "netflow", "blue-team"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = [
    "numpy>=1.26",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "joblib>=1.3",
    "typer>=0.9",
    "rich>=13.0",
]

[project.optional-dependencies]
torch = ["torch>=2.0"]
dev = [
    "pytest>=7.4",
    "ruff>=0.4",
    "torch>=2.0",
]

[project.scripts]
ghostscope = "ghostscope.cli:main"

[project.urls]
Homepage = "https://github.com/joemunene-by/ghostscope"
Repository = "https://github.com/joemunene-by/ghostscope"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 90
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "C4"]
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
